New logic and new functionality
- "Add new profile" button can now create a new profile
- panel drawing logic has better memory management
- changed base64 symbols so generated passwords are accepted on more places

--- a/password manager/password manager.csproj
+++ b/password manager/password manager.csproj
@@ -82,6 +82,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addNewProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addNewProfile.Designer.cs">
+      <DependentUpon>addNewProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="buttonGenerator.cs" />
     <Compile Include="logoScraper.cs" />
     <Compile Include="mainForm.cs">
@@ -99,6 +105,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="addNewProfile.resx">
+      <DependentUpon>addNewProfile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +123,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
