--- a/password manager/password manager.csproj
+++ b/password manager/password manager.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>addNewProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="buttonGenerator.cs" />
+    <Compile Include="filePath.cs" />
     <Compile Include="logoScraper.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
@@ -97,6 +98,7 @@
       <DependentUpon>mainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PasswordGeneration.cs" />
+    <Compile Include="platform.cs" />
     <Compile Include="platformDefaultForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +158,7 @@
     <Content Include="img\icons\visibility.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="python scraper\scraper.py" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.4.31.0\build\Selenium.WebDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.4.31.0\build\Selenium.WebDriver.targets')" />
