added platform class, writing to json

--- a/password manager/password manager.csproj
+++ b/password manager/password manager.csproj
@@ -90,6 +90,7 @@
     </Compile>
     <Compile Include="buttonGenerator.cs" />
     <Compile Include="filePath.cs" />
+    <Compile Include="formCleanup.cs" />
     <Compile Include="logoScraper.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
@@ -107,6 +108,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="readJsonFile.cs" />
     <EmbeddedResource Include="addNewProfile.resx">
       <DependentUpon>addNewProfile.cs</DependentUpon>
     </EmbeddedResource>
