--- a/password manager/password manager.csproj
+++ b/password manager/password manager.csproj
@@ -89,6 +89,14 @@
       <DependentUpon>addNewProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="buttonGenerator.cs" />
+    <Compile Include="filePath.cs" />
+    <Compile Include="formCleanup.cs" />
+    <Compile Include="landingPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="landingPage.Designer.cs">
+      <DependentUpon>landingPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="logoScraper.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
@@ -107,6 +115,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="addNewProfile.resx">
       <DependentUpon>addNewProfile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="landingPage.resx">
+      <DependentUpon>landingPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
@@ -144,6 +155,9 @@
     <Folder Include="img\logos\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="img\icons\arrow.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="img\icons\copy-link.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
