--- a/password manager/password manager.csproj
+++ b/password manager/password manager.csproj
@@ -82,6 +82,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addEmail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addEmail.Designer.cs">
+      <DependentUpon>addEmail.cs</DependentUpon>
+    </Compile>
     <Compile Include="addNewProfile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="readJsonFile.cs" />
+    <EmbeddedResource Include="addEmail.resx">
+      <DependentUpon>addEmail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="addNewProfile.resx">
       <DependentUpon>addNewProfile.cs</DependentUpon>
     </EmbeddedResource>
