Added landing page(wip), improved mem cleanup

--- a/password manager/password manager.csproj
+++ b/password manager/password manager.csproj
@@ -148,6 +148,9 @@
     <None Include="..\.editorconfig">
       <Link>.editorconfig</Link>
     </None>
+    <None Include="img\logos\.keep">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -162,9 +165,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="img\logos\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="img\icons\arrow.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
