--- a/password manager/password manager.csproj
+++ b/password manager/password manager.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="readJsonFile.cs" />
+    <Compile Include="savePasswords.cs" />
     <EmbeddedResource Include="addEmail.resx">
       <DependentUpon>addEmail.cs</DependentUpon>
     </EmbeddedResource>
